# A-simple-rust-back-end-proj

./: README.md
wasm-game-of-life/: Cargo.toml
wasm-game-of-life/src/: lib.rs
webserver/: .env  Cargo.toml
webserver/wasm-client/: Cargo.toml  LICENSE_MIT
webserver/wasm-client/src/: lib.rs
webserver/wasm-client/src/models/: course.rs
webserver/webapp/: Cargo.toml
webserver/webapp/src/: errors.rs  handlers.rs  models.rs  routers.rs
webserver/webapp/static/: register.html  teachers.html
webserver/webapp/static/css/: register.css
webserver/webservice/: Cargo.toml
webserver/webservice/src/: errors.rs  routers.rs  state.rs
webserver/webservice/src/dbaccess/: course.rs  teacher.rs
webserver/webservice/src/handlers/: course.rs  general.rs  teacher.rs
webserver/webservice/src/models/: course.rs  teacher.rs
